fix recorder not centered

--- a/www/less/main/pages/content-blackboard.less
+++ b/www/less/main/pages/content-blackboard.less
@@ -1,6 +1,7 @@
 .course-page .course-blackboard {
 	.felt {
 		position: absolute;
+		width: 100%;
 		background-image: url("/img/zwartevilt.jpg");
 		background-size: 531px 337px;
 	}
